--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
         </div>
         <div class="btclock" id="currentPrice">
         </div>
+        <div class="btclock" id="currentPrice2">
+        </div>
         <div class="btclock" id="moscowTime">
         </div>
     </div>
