--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="app"></div>
-    <script type="module" src="v-app.ts"></script>
+    <script type="module" src="./v-app.ts"></script>
 </body>
 
 </html>
